--- a/src/Designer/frontend/packages/policy-editor/src/components/PolicyCardRules/PolicyRule/PolicyActions/PolicyActions.module.css
+++ b/src/Designer/frontend/packages/policy-editor/src/components/PolicyCardRules/PolicyRule/PolicyActions/PolicyActions.module.css
@@ -10,6 +10,5 @@
 
 .chip {
   margin: 0;
-  margin-right: var(--ds-size-1);
-  margin-top: var(--ds-size-1);
+  margin-inline: var(--ds-size-1);
 }
