--- a/src/Designer/frontend/packages/ux-editor/src/components/Elements/DefaultToolbar.module.css
+++ b/src/Designer/frontend/packages/ux-editor/src/components/Elements/DefaultToolbar.module.css
@@ -4,7 +4,7 @@
 
 .accordionHeader > button {
   border: none;
-  padding: var(--fds-spacing-3) var(--fds-spacing-5);
+  padding: var(--ds-size-6) var(--ds-size-6);
 }
 
 .accordionContent {
