set height of configpanel header

--- a/src/Designer/frontend/packages/ux-editor/src/components/Properties/CommonElements/ConfigPanelHeader/ConfigPanelHeader.module.css
+++ b/src/Designer/frontend/packages/ux-editor/src/components/Properties/CommonElements/ConfigPanelHeader/ConfigPanelHeader.module.css
@@ -1,4 +1,5 @@
 .sectionHeader {
   background-color: var(--ds-color-surface-neutral);
-  padding: var(--ds-size-4) var(--ds-size-4);
+  padding-inline: var(--ds-size-4);
+  height: var(--ds-size-15);
 }
