--- a/src/Designer/frontend/packages/ux-editor/src/containers/DesignViewNavigation/DesignViewNavigation.module.css
+++ b/src/Designer/frontend/packages/ux-editor/src/containers/DesignViewNavigation/DesignViewNavigation.module.css
@@ -1,3 +1,10 @@
+.sectionHeader {
+  background-color: var(--ds-color-surface-neutral);
+  padding-inline: var(--ds-size-4);
+  height: var(--ds-size-15);
+  align-items: center;
+}
+
 .menu {
   align-items: center;
 }
