--- a/src/Runtime/localtest/src/Views/Home/Index.cshtml
+++ b/src/Runtime/localtest/src/Views/Home/Index.cshtml
@@ -4,20 +4,7 @@
 }
 
 @{
-  if (Model.IsAccessedViaLoadBalancer && Model.HasRegisteredApps)
-  {
-    <div class="alert alert-danger" role="alert">
-      <h4>⚠️ Invalid Access Method</h4>
-      <p>
-        You are accessing LocalTest through the loadbalancer, but you have registered apps running on dynamic ports.
-        This configuration is only supported when accessing LocalTest directly.
-      </p>
-      <p>
-        Please access LocalTest directly at: <strong><a href="http://local.altinn.cloud:5101">http://local.altinn.cloud:5101</a></strong>
-      </p>
-    </div>
-  }
-  else if (Model.HttpException != null)
+  if (Model.HttpException != null)
   {
     <div class="alert alert-dark" role="alert">
       An exception occurred while fetching applicationData
