--- a/src/Designer/frontend/packages/ux-editor/src/components/Elements/Elements.module.css
+++ b/src/Designer/frontend/packages/ux-editor/src/components/Elements/Elements.module.css
@@ -10,7 +10,7 @@
   background-color: var(--ds-color-surface-neutral);
   padding-inline: var(--ds-size-4);
   height: var(--ds-size-15);
-  border-bottom: 1px solid var(--ds-color-neutral-border-subtle);
+  border-bottom: var(--ds-border-width-default) solid var(--ds-color-neutral-border-subtle);
   box-sizing: border-box;
 }
 
