--- a/src/Designer/frontend/packages/ux-editor/src/components/Preview/Preview.module.css
+++ b/src/Designer/frontend/packages/ux-editor/src/components/Preview/Preview.module.css
@@ -9,7 +9,7 @@
   align-items: center;
   height: var(--ds-size-15);
   padding-inline: var(--ds-size-2);
-  border-bottom: 1px solid var(--ds-color-neutral-border-subtle);
+  border-bottom: var(--ds-border-width-default) solid var(--ds-color-neutral-border-subtle);
   box-sizing: border-box;
 }
 
