--- a/src/Designer/frontend/libs/studio-components/src/components/StudioPageHeader/StudioPageHeaderHeaderLink/StudioPageHeaderHeaderLink.module.css
+++ b/src/Designer/frontend/libs/studio-components/src/components/StudioPageHeader/StudioPageHeaderHeaderLink/StudioPageHeaderHeaderLink.module.css
@@ -1,4 +1,6 @@
 .link {
   padding: var(--ds-size-3);
   border-radius: var(--ds-border-radius-default);
+  color: var(--ds-color-neutral-background-default);
+  text-decoration: none;
 }
