--- a/src/Designer/frontend/packages/shared/src/components/GiteaHeader/ThreeDotsMenu/ClonePopoverContent/ClonePopoverContent.module.css
+++ b/src/Designer/frontend/packages/shared/src/components/GiteaHeader/ThreeDotsMenu/ClonePopoverContent/ClonePopoverContent.module.css
@@ -1,22 +1,10 @@
 .modalContainer {
-  padding: var(--fds-spacing-2);
+  margin: var(--fds-spacing-2);
   cursor: auto;
 }
 
 .link {
   margin-bottom: var(--fds-spacing-4);
-}
-
-.iconAndText {
-  display: flex;
-  align-items: center;
-  gap: var(--fds-spacing-2);
-  margin-bottom: var(--fds-spacing-4);
-}
-
-.infoIcon {
-  font-size: var(--fds-sizing-5);
-  color: var(--fds-semantic-text-action-default);
 }
 
 .button {
