--- a/src/Designer/frontend/libs/studio-components/src/components/StudioPageHeader/StudioPageHeaderLeft/DigdirLogoLink/DigdirLogoLink.module.css
+++ b/src/Designer/frontend/libs/studio-components/src/components/StudioPageHeader/StudioPageHeaderLeft/DigdirLogoLink/DigdirLogoLink.module.css
@@ -11,4 +11,9 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  padding-left: var(--ds-size-3);
+}
+
+.titleText.preview {
+  color: var(--ds-color-neutral-background-default) !important;
 }
