--- a/src/Designer/frontend/app-preview/src/components/AppPreviewSubMenu/AppPreviewSubMenu.module.css
+++ b/src/Designer/frontend/app-preview/src/components/AppPreviewSubMenu/AppPreviewSubMenu.module.css
@@ -7,6 +7,12 @@
 
 .link {
   color: var(--ds-color-neutral-background-default);
+  padding: var(--ds-size-2);
+}
+
+.link:hover {
+  background-color: var(--studio-preview-header-background-default);
+  border-radius: var(--ds-border-radius-default);
 }
 
 .icon {
