preview for redirect to inbox

--- a/App/views/Home/Index.cshtml
+++ b/App/views/Home/Index.cshtml
@@ -10,7 +10,8 @@
   <link rel="icon" href="https://altinncdn.no/favicon.ico">
 
   <!-- Runtime CSS -->
-  <link rel="stylesheet" type="text/css" href="https://altinncdn.no/toolkits/altinn-app-frontend/4.17.2-pr.759.subform-table-expressions-v3.874b714e/altinn-app-frontend.css">
+  <!-- <link rel="stylesheet" type="text/css" href="https://altinncdn.no/toolkits/altinn-app-frontend/4.17.2-pr.759.subform-table-expressions-v3.874b714e/altinn-app-frontend.css"> -->
+  <link rel="stylesheet" type="text/css" href="https://altinncdn.no/toolkits/altinn-app-frontend/4.23.1-pr.3108.new-urls-to-inbox.529391fe/altinn-app-frontend.css">
 </head>
 <body>
   <div id="root"></div>
@@ -19,6 +20,8 @@
       window.org = appId[1];
       window.app = appId[2];
   </script>
-  <script src="https://altinncdn.no/toolkits/altinn-app-frontend/4.17.2-pr.759.subform-table-expressions-v3.874b714e/altinn-app-frontend.js"></script>
+  <!-- <script src="https://altinncdn.no/toolkits/altinn-app-frontend/4.17.2-pr.759.subform-table-expressions-v3.874b714e/altinn-app-frontend.js"></script> -->
+<script src="https://altinncdn.no/toolkits/altinn-app-frontend/4.23.1-pr.3108.new-urls-to-inbox.529391fe/altinn-app-frontend.js"></script>
+
 </body>
 </html>
