--- a/App/views/Home/Index.cshtml
+++ b/App/views/Home/Index.cshtml
@@ -11,8 +11,9 @@
   <link rel="icon" href="https://altinncdn.no/favicon.ico">
 
   <!-- Runtime CSS -->
-  <link rel="stylesheet" type="text/css"
-    href="https://altinncdn.no/toolkits/altinn-app-frontend/4/altinn-app-frontend.css">
+  <!-- <link rel="stylesheet" type="text/css"
+    href="https://altinncdn.no/toolkits/altinn-app-frontend/4/altinn-app-frontend.css"> -->
+      <link rel="stylesheet" type="text/css" href="https://altinncdn.no/toolkits/altinn-app-frontend/4.23.1-pr.3108.new-urls-to-inbox.529391fe/altinn-app-frontend.css">
 </head>
 
 <body>
@@ -22,7 +23,9 @@
     window.org = appId[1];
     window.app = appId[2];
   </script>
-  <script src="https://altinncdn.no/toolkits/altinn-app-frontend/4/altinn-app-frontend.js"></script>
+  <!-- <script src="https://altinncdn.no/toolkits/altinn-app-frontend/4/altinn-app-frontend.js"></script> -->
+  <script src="https://altinncdn.no/toolkits/altinn-app-frontend/4.23.1-pr.3108.new-urls-to-inbox.529391fe/altinn-app-frontend.js"></script>
+  
 
 </body>
 
