--- a/src/Designer/frontend/packages/policy-editor/src/components/PolicyCardRules/PolicyRule/PolicySubjects/PolicySubjects.module.css
+++ b/src/Designer/frontend/packages/policy-editor/src/components/PolicyCardRules/PolicyRule/PolicySubjects/PolicySubjects.module.css
@@ -1,14 +1,20 @@
-.chipWrapper {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.dropdownWrapper {
+.subjectHeader {
   margin-top: var(--ds-size-8);
+  font-weight: var(--ds-font-weight-medium);
 }
 
-.chip {
-  margin: 0;
-  margin-right: var(--ds-size-2);
+.subjectDescription {
+  color: var(--ds-color-text-subtle);
+}
+
+.selectedSubjectList {
+  display: flex;
+  flex-direction: column;
+  gap: var(--ds-size-2);
   margin-top: var(--ds-size-4);
+  margin-bottom: var(--ds-size-8);
+}
+
+.selectedListTitle {
+  font-weight: var(--ds-font-weight-medium);
 }
