--- a/src/Designer/frontend/packages/policy-editor/src/components/PolicyCardRules/PolicyRule/PolicySubjects/RoleList/RoleList.module.css
+++ b/src/Designer/frontend/packages/policy-editor/src/components/PolicyCardRules/PolicyRule/PolicySubjects/RoleList/RoleList.module.css
@@ -1,6 +1,7 @@
-.accessPackages {
+.roleList {
   display: flex;
   flex-direction: column;
-  gap: var(--fds-spacing-2);
+  gap: var(--ds-size-2);
   margin-top: var(--ds-size-4);
+  margin-bottom: var(--ds-size-8);
 }
