--- a/App/views/Home/Index.cshtml
+++ b/App/views/Home/Index.cshtml
@@ -12,7 +12,7 @@
 
   <!-- Runtime CSS -->
   <link rel="stylesheet" type="text/css"
-    href="https://altinncdn.no/toolkits/altinn-app-frontend/4/altinn-app-frontend.css">
+    href="https://altinncdn.no/toolkits/altinn-app-frontend/4.23.1-pr.3230.over-optimized-for-subform-pdf.e738d976/altinn-app-frontend.css">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
       betaPDFenabled: true
     };
   </script>
-  <script src="https://altinncdn.no/toolkits/altinn-app-frontend/4/altinn-app-frontend.js"></script>
+  <script src="https://altinncdn.no/toolkits/altinn-app-frontend/4.23.1-pr.3230.over-optimized-for-subform-pdf.e738d976/altinn-app-frontend.js"></script>
 </body>
 
 </html>
