--- a/src/Designer/frontend/libs/studio-components/src/components/StudioPageHeader/StudioPageHeaderLeft/DigdirLogoLink/DigdirLogoLink.module.css
+++ b/src/Designer/frontend/libs/studio-components/src/components/StudioPageHeader/StudioPageHeaderLeft/DigdirLogoLink/DigdirLogoLink.module.css
@@ -8,8 +8,12 @@
 }
 
 .titleText {
-  color: var(--ds-color-background-default);
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  padding-left: var(--ds-size-3);
+}
+
+.titleText.preview {
+  color: var(--ds-color-neutral-background-default) !important;
 }
