--- a/src/Designer/frontend/app-development/features/aiAssistant/AiAssistant.module.css
+++ b/src/Designer/frontend/app-development/features/aiAssistant/AiAssistant.module.css
@@ -1,6 +1,8 @@
 .container {
   height: 100%;
+  min-height: 0;
   width: 100%;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
