chore: replaced gitea popover with dropdown menu (#17076)

--- a/src/Designer/frontend/packages/shared/src/components/GiteaHeader/ThreeDotsMenu/ClonePopoverContent/ClonePopoverContent.module.css
+++ b/src/Designer/frontend/packages/shared/src/components/GiteaHeader/ThreeDotsMenu/ClonePopoverContent/ClonePopoverContent.module.css
@@ -1,12 +1,14 @@
 .modalContainer {
-  margin: var(--fds-spacing-2);
+  margin: var(--ds-size-2);
   cursor: auto;
 }
 
 .link {
-  margin-bottom: var(--fds-spacing-4);
+  margin-bottom: var(--ds-size-2);
+  padding: 0%;
 }
 
 .button {
-  margin-top: var(--fds-spacing-4);
+  justify-content: center;
+  margin-top: var(--ds-size-4);
 }
