Break long words in summary2 and pdf v2 (#3902)
* break long words

* new fix

--- a/src/layout/Summary2/CommonSummaryComponents/SingleValueSummary.module.css
+++ b/src/layout/Summary2/CommonSummaryComponents/SingleValueSummary.module.css
@@ -37,7 +37,7 @@
 .summaryValue {
   width: -moz-fit-content;
   width: fit-content;
-  word-break: break-word;
+  overflow-wrap: anywhere;
 }
 
 .error {
