--- a/src/Designer/frontend/packages/shared/src/components/GiteaHeader/ThreeDotsMenu/LocalChangesModal/DeleteModal/DeleteModal.module.css
+++ b/src/Designer/frontend/packages/shared/src/components/GiteaHeader/ThreeDotsMenu/LocalChangesModal/DeleteModal/DeleteModal.module.css
@@ -1,3 +1,7 @@
+.dialog > :first-child > button {
+  width: fit-content;
+}
+
 .buttonWrapper {
   display: flex;
   justify-content: flex-start;
@@ -5,12 +9,22 @@
   gap: var(--fds-spacing-6);
 }
 
+.buttonWrapper button {
+  width: fit-content;
+}
+
 .headerWrapper {
   display: flex;
   align-items: center;
+  padding: var(--ds-size-6) var(--ds-size-4);
+}
+
+.heading {
+  display: flex;
+  align-items: center;
+  gap: var(--ds-size-2);
 }
 
 .trashIcon {
   font-size: var(--ds-size-6);
-  margin-right: var(--ds-size-2);
 }
