--- a/src/Designer/frontend/app-development/features/appPublish/components/DeploymentEnvironmentLogList.module.css
+++ b/src/Designer/frontend/app-development/features/appPublish/components/DeploymentEnvironmentLogList.module.css
@@ -1,10 +1,3 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  gap: var(--fds-spacing-6);
-  flex: 1;
-}
-
 .heading {
   margin-bottom: var(--fds-spacing-2);
 }
@@ -22,6 +15,7 @@
 
 .tableHeaderCell,
 .tableCell {
+  vertical-align: top;
   padding: var(--fds-spacing-2);
 }
 
@@ -32,10 +26,6 @@
 .tableIconCell {
   text-align: center;
   width: 1px;
-}
-
-.tableIconCell svg {
-  vertical-align: middle;
 }
 
 .canceled {
@@ -55,7 +45,7 @@
 }
 
 .icon {
-  --icon-size: calc((4 * 6 / 16) * var(--fds-font-size-f0)); /** Fluid sizing-6 */
+  --icon-size: var(--ds-size-9);
   display: block;
 
   height: var(--icon-size);
@@ -76,4 +66,46 @@
 }
 .succeededIcon {
   color: var(--fds-semantic-border-success-default);
+}
+
+.statusCell,
+.versionCell,
+.finishedDateCell,
+.deployedByCell,
+.buildLogCell {
+  padding: var(--ds-size-4);
+}
+
+.versionCell,
+.finishedDateCell,
+.deployedByCell,
+.buildLogCell {
+  white-space: nowrap;
+}
+
+.statusCell {
+  display: flex;
+  flex-direction: column;
+  gap: var(--ds-size-4);
+}
+
+.eventsDetails {
+  font-size: 0.9rem;
+}
+
+.events {
+  display: flex;
+  flex-direction: column;
+  gap: var(--ds-size-2);
+  padding: var(--ds-size-4);
+}
+
+.event {
+  display: flex;
+  gap: var(--ds-size-4);
+}
+
+.eventCreatedDate {
+  opacity: 0.7;
+  white-space: nowrap;
 }
