--- a/src/Designer/frontend/app-development/features/appPublish/components/DeploymentEnvironmentLogList.module.css
+++ b/src/Designer/frontend/app-development/features/appPublish/components/DeploymentEnvironmentLogList.module.css
@@ -94,10 +94,14 @@
 }
 
 .events {
+  font-size: 0.8rem;
   display: flex;
   flex-direction: column;
   gap: var(--ds-size-2);
+  margin: 0;
   padding: var(--ds-size-4);
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
 
 .event {
