--- a/src/Designer/frontend/app-development/features/appPublish/components/DeploymentEnvironmentLogList.module.css
+++ b/src/Designer/frontend/app-development/features/appPublish/components/DeploymentEnvironmentLogList.module.css
@@ -94,11 +94,8 @@
 }
 
 .events {
-  font-size: 0.8rem;
   margin: 0;
   padding: var(--ds-size-2) 0;
-  white-space: pre-wrap;
-  word-wrap: break-word;
 }
 
 .event {
@@ -110,4 +107,15 @@
 .eventCreatedDate {
   opacity: 0.7;
   white-space: nowrap;
+}
+
+.eventMessage {
+  white-space: pre-wrap;
+}
+.eventCreatedDate,
+.eventMessage {
+  font-family: monospace;
+  font-size: 0.8rem;
+  margin: 0;
+  word-wrap: break-word;
 }
