--- a/src/Designer/frontend/admin/features/apps/components/AppsTable.module.css
+++ b/src/Designer/frontend/admin/features/apps/components/AppsTable.module.css
@@ -11,7 +11,11 @@
   width: 40%;
 }
 
-.metricCell {
+.metricsCell {
+  height: 33px;
+}
+
+.metricsCellContainer {
   display: flex;
   flex-wrap: wrap;
   gap: var(--ds-size-2);
