add spacing to modals and text improvements

--- a/src/Designer/frontend/packages/shared/src/components/UncommittedChangesDialog/UncommittedChangesDialog.module.css
+++ b/src/Designer/frontend/packages/shared/src/components/UncommittedChangesDialog/UncommittedChangesDialog.module.css
@@ -1,7 +1,13 @@
+.dialogMainContent {
+  display: flex;
+  flex-direction: column;
+  gap: var(--ds-size-4);
+}
+
 .fileList {
   display: flex;
   flex-direction: column;
-  gap: var(--ds-size-2);
+  gap: var(--ds-size-4);
 }
 
 .files {
