--- a/src/Designer/frontend/packages/shared/src/components/CreateBranchDialog/CreateBranchDialog.module.css
+++ b/src/Designer/frontend/packages/shared/src/components/CreateBranchDialog/CreateBranchDialog.module.css
@@ -1,3 +1,9 @@
+.dialogMainContent {
+  display: flex;
+  flex-direction: column;
+  gap: var(--ds-size-4);
+}
+
 .buttons {
   display: flex;
   gap: var(--ds-size-2);
