use same font for branches dropdown as its neighbours

--- a/src/Designer/frontend/packages/shared/src/components/GiteaHeader/VersionControlButtons/components/BranchDropdown/BranchDropdown.module.css
+++ b/src/Designer/frontend/packages/shared/src/components/GiteaHeader/VersionControlButtons/components/BranchDropdown/BranchDropdown.module.css
@@ -6,5 +6,7 @@
 
 /* Style for .branchButton is temporary until we migrate to StudioPageHeader */
 .branchButton {
-  color: var(--fds-semantic-text-action-on-action-container);
+  color: var(--ds-base-contrast-default);
+  font-family: var(--studio-font-family);
+  font-size: var(--ds--body-xs-font-size);
 }
