--- a/src/Designer/frontend/packages/shared/src/components/CreateBranchDialog/CreateBranchDialog.module.css
+++ b/src/Designer/frontend/packages/shared/src/components/CreateBranchDialog/CreateBranchDialog.module.css
@@ -7,6 +7,6 @@
 .buttons {
   display: flex;
   gap: var(--ds-size-2);
-  margin-top: var(--ds-size-5);
-  justify-content: flex-end;
+  margin-top: var(--ds-size-2);
+  justify-content: flex-start;
 }
