--- a/src/Designer/frontend/admin/features/appDetails/components/AppHealthMetric.module.css
+++ b/src/Designer/frontend/admin/features/appDetails/components/AppHealthMetric.module.css
@@ -1,36 +1,34 @@
-.title {
-  align-items: center;
-  vertical-align: middle;
+.metric {
+  border: none;
+  padding: var(--ds-size-4) var(--ds-size-8) var(--ds-size-6) var(--ds-size-15);
+  white-space: nowrap;
+}
+
+.metric:before {
+  margin-top: 6px;
+}
+
+.metricTitle {
   display: flex;
-  flex-direction: row;
-  gap: var(--ds-size-8);
-  margin-bottom: 10px;
+  gap: var(--ds-size-2);
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 10px;
 }
 
-.name {
-  flex: 1;
-  padding: 6px 0px;
-}
-
-.marker {
-  font-size: 2.5rem;
-  border-radius: var(--ds-border-radius-md);
-  padding: var(--ds-size-1) var(--ds-size-3);
-  height: 100px;
-  width: 125px;
+.metricText {
   display: flex;
   align-items: center;
-  align-content: center;
-  justify-content: center;
+  gap: var(--ds-size-4);
+  white-space: nowrap;
 }
 
-.error {
-  color: var(--ds-color-danger-surface-default);
-  background-color: var(--ds-color-danger-border-default);
+.metricCount {
+  font-size: 1.4rem;
+  font-weight: bold;
 }
 
-.success {
-  color: var(--ds-color-success-surface-default);
-  background-color: var(--ds-color-success-border-default);
-  opacity: 0.7;
+.chart {
+  height: 150px;
+  width: 100%;
 }
