Forcing help text to use font-weight 400. It turns out the label styling overrides the default font weight in some components, and it all seems to depend on the render hierarchy. Labels are still a bit complex, so instead of rewriting this to something easier, I guess this override (with a test) can do the trick as well. (#3915)
Co-authored-by: Ole Martin Handeland <git@olemartin.org>

--- a/src/app-components/HelpText/Helptext.module.css
+++ b/src/app-components/HelpText/Helptext.module.css
@@ -37,6 +37,10 @@
   max-width: 700px;
 }
 
+.helpTextContent span {
+  font-weight: 400;
+}
+
 .helpText-focus:focus-visible {
   outline: var(--ds-border-width-focus) solid var(--ds-color-neutral-text-default);
   outline-offset: var(--ds-border-width-focus);
