Add warning when 403

--- a/src/Designer/frontend/admin/features/apps/components/AppsTable.module.css
+++ b/src/Designer/frontend/admin/features/apps/components/AppsTable.module.css
@@ -2,6 +2,10 @@
   max-width: 400px;
 }
 
+.errorAlert {
+  margin: var(--ds-size-6) 0;
+}
+
 .errorMetricsHeaderCell {
   display: flex;
   justify-content: end;
