--- a/src/Designer/frontend/packages/shared/src/components/GiteaHeader/VersionControlButtons/components/FetchChangesPopover/FetchChangesPopover.module.css
+++ b/src/Designer/frontend/packages/shared/src/components/GiteaHeader/VersionControlButtons/components/FetchChangesPopover/FetchChangesPopover.module.css
@@ -1,12 +1,8 @@
 .popoverContent {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  gap: var(--fds-spacing-5);
-  width: 445px;
-  max-width: 100%;
+  display: block;
   z-index: 9999;
+  width: max-content;
+  max-width: 445px;
 }
 
 /* Styles for .fetchButton maybe will be temporary until we migrate StudioPageHeader */
