--- a/src/Designer/frontend/packages/shared/src/components/GiteaHeader/VersionControlButtons/components/ShareChangesPopover/ShareChangesPopover.module.css
+++ b/src/Designer/frontend/packages/shared/src/components/GiteaHeader/VersionControlButtons/components/ShareChangesPopover/ShareChangesPopover.module.css
@@ -1,17 +1,7 @@
 .popoverContent {
-  width: 445px;
-  max-width: 100%;
   z-index: 9999;
-}
-
-.popoverContentCenter {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  gap: var(--fds-spacing-5);
-  width: 445px;
-  max-width: 100%;
+  width: max-content;
+  max-width: 445px;
 }
 
 /* Styles for .pushchButton maybe will be temporary until we migrate StudioPageHeader */
