--- a/src/App/backend/test/Altinn.App.Integration.Tests/_testapps/basic/App/views/Home/Index.cshtml
+++ b/src/App/backend/test/Altinn.App.Integration.Tests/_testapps/basic/App/views/Home/Index.cshtml
@@ -10,7 +10,7 @@
   <link rel="icon" href="https://altinncdn.no/favicon.ico">
 
   <!-- Runtime CSS -->
-  <link rel="stylesheet" type="text/css" href="https://altinncdn.no/toolkits/altinn-app-frontend/4/altinn-app-frontend.css">
+  <link rel="stylesheet" type="text/css" href="@string.Format("/{0}/{1}/altinn-app-frontend/altinn-app-frontend.css", ViewBag.Org, ViewBag.App)">
 </head>
 <body>
   <div id="root"></div>
@@ -19,6 +19,6 @@
       window.org = appId[1];
       window.app = appId[2];
   </script>
-  <script src="https://altinncdn.no/toolkits/altinn-app-frontend/4/altinn-app-frontend.js"></script>
+  <script src="@string.Format("/{0}/{1}/altinn-app-frontend/altinn-app-frontend.js", ViewBag.Org, ViewBag.App)"></script>
 </body>
 </html>
