--- a/src/Designer/backend/src/Designer/Views/Home/StartPage.cshtml
+++ b/src/Designer/backend/src/Designer/Views/Home/StartPage.cshtml
@@ -288,7 +288,7 @@
                                         <p>Prosjektet har kaffe-møter med status, planer og temagjennomganger. Disse vil
                                             bli
                                             annonsert fortløpende i <a
-                                                href="https://www.altinndigital.no/arrangementer/">arrangementsoversikten
+                                                href="https://www.digdir.no/digdir/arrangementsoversikt/692">arrangementsoversikten
                                                 på
                                                 Altinn digitalisering</a>. &nbsp;</p>
                                         <p>Du kan følge backlogen til teamet som jobber med utviklingen på
