Update link for Altinn service agreement
"Kom i gang med Altinn"
                                                href="https://samarbeid.digdir.no/altinn/bli-tjenesteeier-i-altinn/2819">en
                                                avtale hos oss</a>.

--- a/src/Designer/backend/src/Designer/Views/Home/StartPage.cshtml
+++ b/src/Designer/backend/src/Designer/Views/Home/StartPage.cshtml
@@ -200,7 +200,7 @@
                                             Altinns infrastruktur?
                                             Da trenger du
                                             <a title="Kom i gang med Altinn"
-                                                href="https://altinndigital.no/kom-i-gang/guide-kom-i-gang-med-altinn/">en
+                                                href="https://samarbeid.digdir.no/altinn/bli-tjenesteeier-i-altinn/2819">en
                                                 avtale hos oss</a>.
                                             I tillegg må tjenesteeier
                                             <a href="https://digdir.apps.altinn.no/digdir/godkjenn-bruksvilkaar/">godta
