fixed alignment i RepeatingGroup table (#3934)
* fixed alignment i RepeatingGroup table

* added test

--- a/src/layout/RepeatingGroup/RepeatingGroup.module.css
+++ b/src/layout/RepeatingGroup/RepeatingGroup.module.css
@@ -122,6 +122,19 @@ table > tbody > tr.editingRow:hover {
   text-align: var(--cell-text-alignment);
 }
 
+.contentFormatting input {
+  text-align: var(--cell-text-alignment) !important;
+}
+
+.contentFormattingEditable {
+  overflow: visible;
+  display: block;
+}
+
+.contentFormattingEditable input {
+  text-align: var(--cell-text-alignment) !important;
+}
+
 .spaceAfterContent {
   padding-right: 5px;
 }
