Fix announcement of soft-validations for screen reader (#3925)
* add role alert to SoftValidations, remove inline-styling

* fix debouncing interrupting voiceover

* only add validation reference if there are validation errors

* more specific aria role for alerts if hey are type success or info

--- a/src/features/validation/ComponentValidations.module.css
+++ b/src/features/validation/ComponentValidations.module.css
@@ -4,3 +4,14 @@
   margin: 0;
   list-style-type: none;
 }
+
+.softValidation {
+  margin-top: var(--ds-size-2);
+  break-inside: avoid;
+}
+
+.softValidationListItem {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style-type: none;
+}
