--- a/src/Designer/frontend/libs/studio-content-library/src/pages/CodeLists/CodeListsPage/CodeListDataEditor/CodeListDataEditor.module.css
+++ b/src/Designer/frontend/libs/studio-content-library/src/pages/CodeLists/CodeListsPage/CodeListDataEditor/CodeListDataEditor.module.css
@@ -19,7 +19,7 @@
 }
 
 .publishing {
-  align-items: baseline;
+  align-items: center;
   display: flex;
   flex-direction: row;
   gap: var(--ds-size-4);
