--- a/src/Designer/frontend/packages/process-editor/src/components/ConfigPanel/ConfigServiceTask/ConfigPdfServiceTask/ConfigPdfServiceTask.module.css
+++ b/src/Designer/frontend/packages/process-editor/src/components/ConfigPanel/ConfigServiceTask/ConfigPdfServiceTask/ConfigPdfServiceTask.module.css
@@ -2,9 +2,10 @@
   display: flex;
   flex-direction: column;
   gap: var(--fds-spacing-3);
-  padding-inline: var(--fds-spacing-10);
+  padding-inline: var(--fds-spacing-5);
   margin-top: var(--fds-spacing-3);
   margin-bottom: var(--fds-spacing-3);
+  list-style-type: none;
 }
 
 ol > li::marker {
