--- a/src/Designer/frontend/dashboard/pages/CreateService/CreateService.module.css
+++ b/src/Designer/frontend/dashboard/pages/CreateService/CreateService.module.css
@@ -2,5 +2,6 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  padding-top: var(--fds-spacing-22);
+  padding-top: var(--fds-spacing-12);
+  max-height: calc(100vh - 80px);
 }
